--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,12 +12,54 @@
         <action
             android:id="@+id/name_to_choose"
             app:destination="@id/chooseFragment"/>
+        <argument
+            android:name="name"
+            app:argType="string"
+            android:defaultValue="name" />
     </fragment>
 
     <fragment
         android:id="@+id/chooseFragment"
         android:name="com.risako070310.music.ChooseFragment"
         tools:layout="@layout/fragment_choose" >
+        <action
+            android:id="@+id/choose_to_song"
+            app:destination="@id/songFragment" />
+
+        <argument
+            android:name="name"
+            app:argType="string"
+            android:defaultValue="name" />
+        <argument
+            android:name="songId"
+            app:argType="string"
+            android:defaultValue="id" />
     </fragment>
+
+    <fragment
+        android:id="@+id/songFragment"
+        android:name="com.risako070310.music.SongFragment"
+        tools:layout="@layout/fragment_song" >
+        <action
+            android:id="@+id/song_to_comment"
+            app:destination="@id/commentFragment"/>
+
+        <argument
+            android:name="name"
+            app:argType="string"
+            android:defaultValue="name" />
+        <argument
+            android:name="songId"
+            app:argType="string"
+            android:defaultValue="id" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/commentFragment"
+        android:name="com.risako070310.music.CommentFragment"
+        tools:layout="@layout/fragment_comment" >
+
+    </fragment>
+
 
 </navigation>
