--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -4,39 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ChooseFragment">
+    tools:context=".CommentFragment">
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/songEditText"
-        android:ems="30"
-        tools:layout_editor_absoluteY="87dp"
-        tools:ignore="MissingConstraints" />
-
-    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/resultView"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="200dp"
-        tools:ignore="MissingConstraints"  />
+        android:ems="10"
+        android:id="@+id/commentEditText"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="87dp"
+        tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nextButton"
         android:text="次へ"
-        app:layout_constraintTop_toBottomOf="@id/songEditText"
+        app:layout_constraintTop_toBottomOf="@id/commentEditText"
         tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="400dp"
-        tools:ignore="MissingConstraints" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text"
-        app:layout_constraintTop_toBottomOf="@id/nextButton"
+        tools:layout_editor_absoluteY="183dp"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
