--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,9 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/nav_host"
+        android:id="@+id/nav_host_login"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/nav_graph"
+        app:navGraph="@navigation/nav_graph_login"
         app:defaultNavHost="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
