create user page

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,9 +39,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/songImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="artist"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
         app:layout_constraintTop_toBottomOf="@id/artistView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
