--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ChooseFragment"
-    android:background="@color/bg_gray">
+    android:background="@color/bg_gray"
+    tools:context=".ChooseFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
@@ -34,26 +34,26 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/resultView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/resultView"
-        app:layout_constraintTop_toBottomOf="@id/textBox"
+        app:layout_constraintEnd_toEndOf="@id/textBox"
         app:layout_constraintStart_toStartOf="@id/textBox"
-        app:layout_constraintEnd_toEndOf="@id/textBox" />
+        app:layout_constraintTop_toBottomOf="@id/textBox" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/nextButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:id="@+id/nextButton"
-        android:text="次へ"
-        android:textSize="20dp"
-        android:fontFamily="sans-serif-black"
         android:layout_marginTop="30dp"
-        android:textColor="@color/white"
         android:backgroundTint="@color/blue_dark"
+        android:fontFamily="sans-serif-black"
+        android:text="次へ"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         app:cornerRadius="16dp"
-        app:layout_constraintTop_toBottomOf="@id/resultView"
+        app:layout_constraintEnd_toEndOf="@id/textBox"
         app:layout_constraintStart_toStartOf="@id/textBox"
-        app:layout_constraintEnd_toEndOf="@id/textBox"/>
+        app:layout_constraintTop_toBottomOf="@id/resultView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
