--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NameFragment"
-    android:background="@color/bg_gray">
+    android:background="@color/bg_gray"
+    tools:context=".NameFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
@@ -36,18 +36,18 @@
 
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/nextButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:id="@+id/nextButton"
-        android:text="次へ"
-        android:textSize="20sp"
-        android:fontFamily="sans-serif-black"
         android:layout_marginTop="24dp"
-        android:textColor="@color/white"
         android:backgroundTint="@color/blue_dark"
+        android:fontFamily="sans-serif-black"
+        android:text="次へ"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:cornerRadius="16dp"
-        app:layout_constraintTop_toBottomOf="@id/textBox"
+        app:layout_constraintEnd_toEndOf="@id/textBox"
         app:layout_constraintStart_toStartOf="@id/textBox"
-        app:layout_constraintEnd_toEndOf="@id/textBox"/>
+        app:layout_constraintTop_toBottomOf="@id/textBox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
