--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SongFragment"
-    android:background="@color/bg_gray">
+    android:background="@color/bg_gray"
+    tools:context=".SongFragment">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/card"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,55 +25,55 @@
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/songTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/songTitle"
-                android:text="SongTitle"
-                android:textSize="24sp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:text="SongTitle"
+                android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@id/artistName"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/artistName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/artistName"
+                android:layout_marginStart="24dp"
                 android:text="Artist"
                 android:textSize="20dp"
-                android:layout_marginStart="24dp"
-                app:layout_constraintTop_toBottomOf="@id/songTitle"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/songTitle" />
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/jacketView"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:id="@+id/jacketView"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/nextButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:id="@+id/nextButton"
-        android:text="次へ"
-        android:textSize="20sp"
-        android:fontFamily="sans-serif-black"
         android:layout_marginTop="24dp"
-        android:textColor="@color/white"
         android:backgroundTint="@color/blue_dark"
+        android:fontFamily="sans-serif-black"
+        android:text="次へ"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:cornerRadius="16dp"
-        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintEnd_toEndOf="@id/card"
         app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintEnd_toEndOf="@id/card"/>
+        app:layout_constraintTop_toBottomOf="@id/card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
