--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -30,7 +30,9 @@
             android:backgroundTint="@color/white"
             android:ems="15"
             android:hint="感想や一言で想いを込めよう"
-            android:inputType="textPersonName" />
+            android:inputType="text"
+            android:imeOptions="actionDone"
+            android:maxLength="56" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -44,7 +46,7 @@
         android:fontFamily="sans-serif-black"
         android:text="次へ"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="@id/textBox"
         app:layout_constraintStart_toStartOf="@id/textBox"
