--- a/app/src/main/res/layout/item_list_cell.xml
+++ b/app/src/main/res/layout/item_list_cell.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/text_light"
                 tools:text="アカウント名"
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/text_dark"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="18sp"
                 tools:text="アーティスト名"
                 app:layout_constraintTop_toBottomOf="@id/songContentView"
                 app:layout_constraintStart_toStartOf="@id/songContentView"
