--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -30,7 +30,9 @@
             android:backgroundTint="@color/white"
             android:ems="15"
             android:hint="名前を入力"
-            android:inputType="textPersonName" />
+            android:inputType="text"
+            android:imeOptions="actionDone"
+            android:maxLength="12" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
