--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -30,8 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
-                android:text="SongTitle"
                 android:textSize="20sp"
+                tools:text="SongTitle"
                 app:layout_constraintBottom_toTopOf="@id/artistName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -42,8 +42,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="Artist"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                tools:text="Artist"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/songTitle"
                 app:layout_constraintEnd_toStartOf="@id/jacketView"/>
