--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -38,35 +38,37 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/songView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="12dp"
                 android:fontFamily="sans-serif-black"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 tools:text="SongTitle"
                 app:layout_constraintBottom_toTopOf="@id/artistView"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/songImageView"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/artistView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
                 android:fontFamily="sans-serif-black"
                 tools:text="Artist"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/songView" />
+                app:layout_constraintTop_toBottomOf="@id/songView"
+                app:layout_constraintEnd_toStartOf="@id/songImageView"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/songImageView"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="24dp"
+                android:layout_margin="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -77,7 +79,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_comment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
@@ -90,18 +92,16 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/commentText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_margin="12dp"
             android:fontFamily="sans-serif-black"
             tools:text="comment"
             android:textColor="@color/blue_primary"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@id/card_comment"
+            app:layout_constraintEnd_toEndOf="@id/card_comment"
+            app:layout_constraintStart_toStartOf="@id/card_comment" />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
