--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_gray"
-    tools:context=".CommentFragment">
+    tools:context=".login.CommentFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
