--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ListFragment"
+    tools:context=".main.ListFragment"
     android:background="@color/bg_gray">
 
     <androidx.recyclerview.widget.RecyclerView
