--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_gray"
-    tools:context=".SongFragment">
+    tools:context=".login.SongFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
