--- a/app/src/main/res/navigation/nav_graph_edit.xml
+++ b/app/src/main/res/navigation/nav_graph_edit.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/editNameFragment"
-        android:name="com.risako070310.music.EditNameFragment"
+        android:name="com.risako070310.music.edit.EditNameFragment"
         tools:layout="@layout/fragment_name" >
         <action
             android:id="@+id/edit_name_to_choose"
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/editChooseFragment"
-        android:name="com.risako070310.music.EditChooseFragment"
+        android:name="com.risako070310.music.edit.EditChooseFragment"
         tools:layout="@layout/fragment_choose" >
         <action
             android:id="@+id/edit_choose_to_song"
@@ -38,7 +38,7 @@
 
     <fragment
         android:id="@+id/editSongFragment"
-        android:name="com.risako070310.music.EditSongFragment"
+        android:name="com.risako070310.music.edit.EditSongFragment"
         tools:layout="@layout/fragment_song" >
         <action
             android:id="@+id/edit_song_to_comment"
@@ -68,7 +68,7 @@
 
     <fragment
         android:id="@+id/editCommentFragment"
-        android:name="com.risako070310.music.EditCommentFragment"
+        android:name="com.risako070310.music.edit.EditCommentFragment"
         tools:layout="@layout/fragment_comment" >
 
     </fragment>
