--- a/app/src/main/res/navigation/nav_graph_login.xml
+++ b/app/src/main/res/navigation/nav_graph_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nameFragment"
-        android:name="com.risako070310.music.NameFragment"
+        android:name="com.risako070310.music.login.NameFragment"
         tools:layout="@layout/fragment_name" >
         <action
             android:id="@+id/name_to_choose"
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/chooseFragment"
-        android:name="com.risako070310.music.ChooseFragment"
+        android:name="com.risako070310.music.login.ChooseFragment"
         tools:layout="@layout/fragment_choose" >
         <action
             android:id="@+id/choose_to_song"
@@ -38,7 +38,7 @@
 
     <fragment
         android:id="@+id/songFragment"
-        android:name="com.risako070310.music.SongFragment"
+        android:name="com.risako070310.music.login.SongFragment"
         tools:layout="@layout/fragment_song" >
         <action
             android:id="@+id/song_to_comment"
@@ -68,7 +68,7 @@
 
     <fragment
         android:id="@+id/commentFragment"
-        android:name="com.risako070310.music.CommentFragment"
+        android:name="com.risako070310.music.login.CommentFragment"
         tools:layout="@layout/fragment_comment" >
 
     </fragment>
