--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:textSize="28sp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/font"
         tools:text="Name"
         app:layout_constraintBottom_toTopOf="@id/card"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginTop="12dp"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/font"
                 android:textSize="20sp"
                 tools:text="SongTitle"
                 app:layout_constraintBottom_toTopOf="@id/artistView"
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/font"
                 tools:text="Artist"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="@font/font"
             tools:text="comment"
             android:textColor="@color/blue_primary"
             android:textSize="16sp"
@@ -111,7 +111,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/blue_dark"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/font"
         android:text="編集"
         android:textColor="@color/white"
         android:textSize="20sp"
