--- a/app/src/main/res/layout/item_list_cell.xml
+++ b/app/src/main/res/layout/item_list_cell.xml
@@ -25,7 +25,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:textSize="16sp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/font"
                 android:textColor="@color/text_light"
                 tools:text="アカウント名"
                 app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/font"
                 android:textColor="@color/text_dark"
                 tools:text="曲名"
                 app:layout_constraintTop_toBottomOf="@id/nameContentView"
@@ -50,7 +50,7 @@
                 android:id="@+id/artistNameView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/font"
                 android:textColor="@color/text_dark"
                 android:layout_marginBottom="18sp"
                 tools:text="アーティスト名"
@@ -66,7 +66,7 @@
                 android:layout_marginBottom="16dp"
                 android:textSize="18sp"
                 android:textColor="@color/blue_primary"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/font"
                 tools:text="コメント"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/artistNameView"
