--- a/app/src/main/res/layout/result_list_cell.xml
+++ b/app/src/main/res/layout/result_list_cell.xml
@@ -13,6 +13,7 @@
         tools:text="曲名"
         android:textSize="18sp"
         android:layout_marginStart="5dp"
+        android:fontFamily="@font/font"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/resultImageView"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/resultArtistName"
         tools:text="アーティスト名"
+        android:fontFamily="@font/font"
         app:layout_constraintTop_toBottomOf="@id/resultSongName"
         app:layout_constraintStart_toStartOf="@id/resultSongName"
         app:layout_constraintEnd_toStartOf="@id/resultImageView"
