--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -7,6 +7,26 @@
     android:background="@color/bg_gray"
     tools:context=".login.ChooseFragment">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_margin="24dp"
+        android:id="@+id/image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="今のお気に入り、気分はどの曲？"
+        android:textSize="22sp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
@@ -29,7 +49,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:ems="15"
-            android:hint="曲名を入力"
+            android:hint="曲を調べよう"
             android:inputType="text"
             android:imeOptions="actionDone"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -42,20 +62,5 @@
         app:layout_constraintEnd_toEndOf="@id/textBox"
         app:layout_constraintTop_toBottomOf="@id/textBox"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-<!--    <com.google.android.material.button.MaterialButton-->
-<!--        android:id="@+id/nextButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="60dp"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        android:backgroundTint="@color/blue_dark"-->
-<!--        android:fontFamily="sans-serif-black"-->
-<!--        android:text="次へ"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:textSize="20sp"-->
-<!--        app:cornerRadius="16dp"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/textBox"-->
-<!--        app:layout_constraintStart_toStartOf="@id/textBox"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/resultView" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
