--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -7,6 +7,26 @@
     android:background="@color/bg_gray"
     tools:context=".login.CommentFragment">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_margin="24dp"
+        android:id="@+id/image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="音楽にぴったりの感想を届けよう。"
+        android:textSize="22sp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
@@ -29,7 +49,8 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:ems="15"
-            android:hint="感想や一言で想いを込めよう"
+            android:hint="想いを込めたひとこと"
+            android:fontFamily="@font/font"
             android:inputType="text"
             android:imeOptions="actionDone"
             android:maxLength="56" />
@@ -43,8 +64,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/blue_dark"
-        android:fontFamily="sans-serif-black"
-        android:text="次へ"
+        android:fontFamily="@font/font"
+        android:text="届ける"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="16dp"
