--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -7,6 +7,26 @@
     android:background="@color/bg_gray"
     tools:context=".login.SongFragment">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_margin="24dp"
+        android:id="@+id/image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="今のお気に入り、気分はこの曲？"
+        android:textSize="22sp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
@@ -32,6 +52,7 @@
                 android:layout_marginTop="12dp"
                 android:textSize="20sp"
                 tools:text="SongTitle"
+                android:fontFamily="@font/font"
                 app:layout_constraintBottom_toTopOf="@id/artistName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -44,6 +65,7 @@
                 android:layout_marginStart="12dp"
                 android:textSize="16sp"
                 tools:text="Artist"
+                android:fontFamily="@font/font"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/songTitle"
                 app:layout_constraintEnd_toStartOf="@id/jacketView"/>
@@ -67,7 +89,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/blue_dark"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/font"
         android:text="次へ"
         android:textColor="@color/white"
         android:textSize="20sp"
