add dark mode layout

--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -11,7 +11,8 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@mipmap/ic_launcher_foreground"
-        android:layout_margin="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
         android:id="@+id/image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -21,17 +22,22 @@
         android:layout_height="wrap_content"
         android:text="とっておきの1曲を届けよう。\n音楽に想いを添えて、みんなに。"
         android:textSize="18sp"
-        android:layout_marginTop="24dp"
         android:fontFamily="@font/font"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"/>
+        app:layout_constraintTop_toBottomOf="@id/image"
+        app:layout_constraintBottom_toTopOf="@id/textBox"
+        app:layout_constraintVertical_bias="0"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:counterEnabled="true"
+        app:counterMaxLength="12"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
         app:boxBackgroundColor="@color/white"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
@@ -48,8 +54,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
+            android:textColor="@color/black"
             android:ems="15"
-            android:hint="名前を入力"
+            android:hint="名前を入力(公開されます)"
             android:fontFamily="@font/font"
             android:inputType="text"
             android:imeOptions="actionDone"
