--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -11,27 +11,32 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@mipmap/ic_launcher_foreground"
-        android:layout_margin="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
         android:id="@+id/image"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="今のお気に入り、気分はどの曲？"
+        android:text="今のお気に入り、気分はどの曲？\n1曲のみ選曲できます"
         android:textSize="18sp"
-        android:layout_marginTop="24dp"
         android:fontFamily="@font/font"
+        android:id="@+id/text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"/>
+        app:layout_constraintTop_toBottomOf="@id/image"
+        app:layout_constraintBottom_toTopOf="@id/textBox"
+        app:layout_constraintVertical_bias="0"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textBox"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
         app:boxBackgroundColor="@color/white"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
