--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -11,7 +11,8 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@mipmap/ic_launcher_foreground"
-        android:layout_margin="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
         android:id="@+id/image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -32,6 +33,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:counterEnabled="true"
+        app:counterMaxLength="56"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
         app:boxBackgroundColor="@color/white"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
