--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -11,7 +11,8 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@mipmap/ic_launcher_foreground"
-        android:layout_margin="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
         android:id="@+id/image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -84,18 +85,35 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/backButton"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="6dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/font"
+        android:text="戻る"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:cornerRadius="16dp"
+        app:layout_constraintEnd_toStartOf="@id/nextButton"
+        app:layout_constraintStart_toStartOf="@id/card"
+        app:layout_constraintTop_toBottomOf="@id/card" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/nextButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
+        android:layout_marginStart="6dp"
         android:backgroundTint="@color/blue_dark"
         android:fontFamily="@font/font"
-        android:text="次へ"
+        android:text="決定"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="@id/card"
-        app:layout_constraintStart_toStartOf="@id/card"
+        app:layout_constraintStart_toEndOf="@id/backButton"
         app:layout_constraintTop_toBottomOf="@id/card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
