--- a/app/src/main/res/layout/item_list_cell.xml
+++ b/app/src/main/res/layout/item_list_cell.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="6dp"
                 android:textSize="16sp"
                 android:fontFamily="@font/font"
                 android:textColor="@color/text_light"
@@ -52,7 +53,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 android:textColor="@color/text_dark"
-                android:layout_marginBottom="18sp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="18dp"
                 tools:text="アーティスト名"
                 app:layout_constraintTop_toBottomOf="@id/songContentView"
                 app:layout_constraintStart_toStartOf="@id/songContentView"
