--- a/app/src/main/res/navigation/nav_graph_login.xml
+++ b/app/src/main/res/navigation/nav_graph_login.xml
@@ -44,6 +44,10 @@
             android:id="@+id/song_to_comment"
             app:destination="@id/commentFragment"/>
 
+        <action
+            android:id="@+id/song_backto_choose"
+            app:destination="@id/chooseFragment"/>
+
         <argument
             android:name="name"
             app:argType="string"
