--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue_primary">#FF7BA1EB</color>
     <color name="black">#FFE6E6E6</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="input_color">#FF505050</color>
     <color name="text_dark">#FFEFEFEF</color>
-    <color name="text_light">#FFDEDEDE</color>
+    <color name="text_light">#FFACACAC</color>
 </resources>
