--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue_primary">#FF7BA1EB</color>
     <color name="black">#FF505050</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="input_color">#FF505050</color>
     <color name="text_dark">#FF6C6C6C</color>
     <color name="text_light">#FF898989</color>
 </resources>
