--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/locationFragment"
+        android:icon="@drawable/ic_baseline_location_on_24"
+        android:title="StreetPass"/>
+    <item
         android:id="@+id/listFragment"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"/>
