add info picture

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -33,6 +33,7 @@
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:id="@+id/pic"
+        android:src="@drawable/pic"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
